syntax = "proto3";


package userPackage;

service UserService{
    rpc createUser (User) returns (User);
    rpc login(LoginInfo) returns (User);
    rpc updateUser (User) returns (User);
    rpc getUser(UserEmail) returns (User);
    rpc getAllUsers(voidNoparams) returns (Users);
}


message voidNoparams{

}
message User{
    string name = 1;
    string email = 2;
    string password = 3;
    string address = 4;
}

message LoginInfo{
    string email = 1;
    string password = 2;
}

message UserEmail{
    string email = 1;
}

message Users{
    repeated User users = 1;
}